@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Feb 2015; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-25.0.9999-r1.ebuild,
+  emacs-vcs-25.0.9999-r2.ebuild:
+  Sync from Portage tree. Remove old.
+
   19 Feb 2015; Ulrich Müller <ulm@gentoo.org> emacs-vcs-25.0.9999-r2.ebuild:
   Use "gamestat" group for shared score files, following QA tree policy.
 
